Fix search screen filters EPA lookups for fields (#519)